Implemented Service and repository Arthitecture Apis
